package(default_visibility = ["//visibility:public"])

load("@npm_angular_bazel//:index.bzl", "ng_module")

ng_module(
    name = "src",
    srcs = glob(["*.ts"]),
    assets = ["caching-demo.html"],
    tsconfig = "//:tsconfig.json",
    deps = [
            "@npm//rxjs",
            "@npm//@angular/core",
            "@npm//@angular/common",
            "@npm//@angular/forms",
            "@npm//@angular/router",
            "//src/apps/shared-components/shared",
            "//src/apps/models"  
    ]
)